Updated tex files

--- a/docs/latex/06-Conclusiones.tex
+++ b/docs/latex/06-Conclusiones.tex
@@ -9,11 +9,11 @@ Gracias a los experimentos realizados y al análisis de los resultados, se llega
 \section{Conclusiones}
 
 Nuestra primera conclusión, es que el aumento de datos ayuda a los métodos basados en redes neuronales, al menos, en las dos arquitecturas evaluadas. Los métodos propuestos mejoran el resultado de clasificación y dependen fuertemente del conjunto de datos.
-El método propuesto restringiendo el reemplazo es el que  obtiene mejores resultados. Este método conserva, sin alteración, las palabras con mayor puntuación $\chi^2$, sin embargo, corre el riesgo de sobreajuste conforme aumenta el número de documentos nuevos. Sí se necesita un gran número de documentos, el método basado en relaciones equivalentes es el ideal, ya que ofrece un vocabulario más amplio mediante la elección de diferentes semillas (palabras relacionadas a la clase de interés). 
+El método propuesto \textit{Restricción} $\chi^2$ obtiene mejores resultados, en comparación con los diferentes métodos estudiados. Este método conserva, sin alteración, las palabras con mayor puntuación $\chi^2$, sin embargo, corre el riesgo de sobreajuste conforme aumenta el número de documentos nuevos. Si se necesita un gran número de documentos, el método basado en relaciones equivalentes es el ideal, ya que ofrece un vocabulario más amplio mediante la elección de diferentes semillas (palabras relacionadas con la clase de interés).
 
-Con respecto al efecto del aumento de datos en diferentes arquitecturas de red, el aumento de datos, obtiene un efecto negativo para arquitecturas basadas en redes recurrentes, ya que consideran el texto como secuencia con valores dependientes en lugar de considerar características aisladas como es el caso de las redes convolucionales y los modelos lineales. Por consiguiente, la red convolucional fue mas robusta en los diferentes aumentos de datos. En los modelos lineales, fue posible observar un incremento significativo en los resultados de clasificación, pero esto es debido a la importancia que se le está dando a la clase positiva y se logró comprobar con un modelo lineal que considera el desbalance; en donde la línea base es muy cercana a los valores que se pueden obtener realizando aumento de datos. Aún considerando este hecho es preferible realizar aumento de datos por los beneficios de regularización que ofrece.
+Con respecto al efecto del aumento de datos en diferentes arquitecturas de red, el aumento de datos, obtiene un efecto negativo para arquitecturas basadas en redes recurrentes, ya que consideran el texto como secuencia con valores dependientes en lugar de considerar características aisladas como es el caso de las redes convolucionales y los modelos lineales. Por consiguiente, la red convolucional fue más robusta en los diferentes aumentos de datos. En los modelos lineales, fue posible observar un incremento significativo en los resultados de clasificación, pero esto es debido a la importancia que se le está dando a la clase positiva y se logró comprobar con un modelo lineal que considera el desbalance; donde la línea base es muy cercana a los valores que se pueden obtener utilizando aumento de datos. Incluso considerando este hecho es preferible utilizar aumento de datos por los beneficios de regularización que ofrece.
 
-Finalmente, se pudo comprobar que es posible mejorar la predicción en el perfilado de depresión y anorexia, logrando una ganancia porcentual entre 1 y 18\% en términos de la métrica F1 en comparación con no realizar aumento de datos y una ganancia entre 1 y 7\% en comparación con otros métodos de aumento. Además, fue posible igualar los resultados del estado del arte utilizando modelos neuronales menos complejos.
+Finalmente, se comprobó que se puede mejorar la predicción en el perfilado de depresión y anorexia, logrando una ganancia porcentual entre un 1 y 18\% en términos de la métrica F1 en comparación con no ocupar aumento de datos y una ganancia entre un 1 y 7\% en comparación con otros métodos de aumento. Además, fue posible igualar los resultados del estado del arte utilizando modelos neuronales menos complejos.
 
 
 \section{Trabajo futuro}
