--- a/docs/latex/agradecimiento.tex
+++ b/docs/latex/agradecimiento.tex
@@ -1,3 +1,21 @@
 
 \chapter{Agradecimientos}
+
 Esta investigación fue realizada gracias al apoyo otorgado por el Consejo Nacional de Ciencia y Tecnología (CONACYT), a través de la beca No. 718947. 
+
+Al INAOE, por brindarme la oportunidad de continuar con mi formación profesional. Gracias a todos los investigadores de la coordinación de Ciencias Computacionales que con su amabilidad y paciencia logre comprender los fundamentos teóricos para realizar este trabajo. 
+
+A mi asesor, Luis Villaseñor Pineda, por dirigir esta investigación de la mejor forma posible, siempre dándome sugerencias sobre cómo mejorar mi trabajo.
+
+Al doctor Manuel Montes y Gómez el cual sin ser mi asesor siempre se mantuvo al pendiente de mis avances.
+
+Al doctor Francisco Martínes Trinidad, por enseñarme los fundamentos teóricos en aprendizaje computacional, manteniendo una crítica objetiva sobre mi trabajo.
+
+Al doctor Aurelio López López, por sus clases en procesamiento de lenguaje natural y sus aportes para corregir la claridad de este documento.
+
+A Luz Maria Romero Cirne, por ayudarme a corregir los errores ortográficos en este documento.
+
+A mis familiares y amigos por apoyarme en esta aventura.
+
+
+
