--- a/docs/latex/dedicatoria.tex
+++ b/docs/latex/dedicatoria.tex
@@ -1,4 +1,7 @@
 \chapter{Dedicatoria}
 
-A mi familia y amigos, por motivarme cada día superar mis límites. 
+\begin{flushright}
+\textit{Para Luz, \\ 
+por brindarme siempre su apoyo cuando más lo necesitaba y siempre creer en mi.}
+\end{flushright}
 
