--- a/docs/latex/sections/02-marco/01-text_clasif.tex
+++ b/docs/latex/sections/02-marco/01-text_clasif.tex
@@ -1,9 +1,9 @@
 \section{Clasificación de textos}
 
-En años recientes, ha habido un crecimiento exponencial en el número de textos disponibles en internet, a tal grado que es imposible procesarlos manualmente, de ahí su indispensable procesamiento por medios automáticos. Los problemas de clasificación automática de textos han sido ampliamente estudiados en las últimas décadas, especialmente con los recientes avances en procesamiento de lenguaje natural, muchos investigadores están interesados en desarrollar aplicaciones que mejoren los métodos de clasificación de textos. La tarea motivo de este trabajo se circunscribe a las tareas de perfilado de autor, en donde se desea conocer la categoría (clase o tipo de autores) a la que pertenece un documento dado (historial del usuario).
+En años recientes, ha habido un crecimiento exponencial en el número de textos disponibles en Internet, a tal grado que es imposible procesarlos manualmente, de ahí la importancia de su procesamiento automático. Los problemas de clasificación automática de textos han sido ampliamente estudiados en las últimas décadas, especialmente con los avances en procesamiento de lenguaje natural, muchos investigadores están interesados en desarrollar aplicaciones que mejoren los métodos de clasificación de textos. Las tareas exploradas en este trabajo se circunscriben a las tareas de perfilado de autor, donde se desea conocer la categoría (clase o tipo de autores) a la que pertenece un documento dado (historial del usuario).
 
 \subsubsection{Definición}
 
-La clasificación de textos puede ser definida como la tarea de categorizar un grupo de documentos en una o más clases predefinidas de acuerdo a sus temas \citep{Kadhim2019}. Retomando la definición de \citep{Kadhim2019}, se parte con un grupo específico de documentos $D={\begin{Bmatrix} d_1 , ... , d_n \end{Bmatrix}}$, con clases predefinidas $C={\begin{Bmatrix} c_1 , ... , c_m \end{Bmatrix}}$ y un nuevo documento $q$ el cual es generalmente indicado como una consulta, con el objetivo de predecir la clase del documento consultado, la cual puede ser una o más clases pertenecientes a $C$.
+La clasificación de textos puede ser definida como la tarea de categorizar un grupo de documentos en una o más clases predefinidas de acuerdo con sus temas \citep{Kadhim2019}. Retomando la definición de \citep{Kadhim2019}, se parte con un grupo específico de documentos $D={\begin{Bmatrix} d_1 , ... , d_n \end{Bmatrix}}$, con clases predefinidas $C={\begin{Bmatrix} c_1 , ... , c_m \end{Bmatrix}}$ y un nuevo documento $q$ el cual es generalmente indicado como una consulta, con el objetivo de predecir la clase del documento consultado, la cual puede ser una o más clases pertenecientes a $C$.
 
-De acuerdo a \citep{kowsari2019text}, la clasificación de textos puede describirse en cuatro pasos: extracción de características, reducción de dimensionalidad o selección de características, construcción del modelo de clasificación y evaluación. A continuación, se resumen algunos de los puntos más importantes para este trabajo, tomados del análisis de \citep{kowsari2019text}.
+De acuerdo con \citep{kowsari2019text}, la clasificación de textos puede describirse en cuatro pasos: extracción de características, reducción de dimensionalidad o selección de características, construcción del modelo de clasificación y evaluación. A continuación, se describen en forma resumida algunos de los puntos más importantes para este trabajo, tomados del análisis de \citep{kowsari2019text}.
