--- a/docs/latex/sections/02-marco/05-metrics.tex
+++ b/docs/latex/sections/02-marco/05-metrics.tex
@@ -17,7 +17,7 @@ Existen diferentes métricas para evaluar los modelos de aprendizaje computacion
 \end{table}
 
 
-La matriz de confusión no es una medida como tal, pero las métricas de evaluación están basados en los números dentro de esta.
+La matriz de confusión no es una medida como tal, pero las métricas de evaluación están basadas en los números dentro de esta.
 
 
 %\textbf{Términos asociados a la matriz de confusión:}
@@ -29,7 +29,7 @@ La matriz de confusión no es una medida como tal, pero las métricas de evaluac
     \item \textbf{Falsos Negativos (FN)}: Es el número de predicciones en que la clase verdadera es 1 y la predicción es 0.
 \end{enumerate}
 
-El escenario ideal sería que el modelo obtenga $0$ falsos positivos y falsos negativos, pero ese no es el caso en la vida real y el objetivo en ocasiones es tratar de minimizar los falsos positivos o los falsos negativos.
+El escenario ideal sería que el modelo obtenga $0$ falsos positivos y falsos negativos, pero este no es el caso en la vida real, el objetivo en ocasiones es tratar de minimizar ya sea los falsos positivos o los falsos negativos.
 
 \textbf{Exactitud}: La proporción del número de ejemplos en el conjunto de evaluación que son correctamente clasificados por el modelo. La exactitud es utilizada cuando las clases tienen la misma importancia para la clasificación.
 
