--- a/docs/latex/sections/tables/resultados.tex
+++ b/docs/latex/sections/tables/resultados.tex
@@ -1,6 +1,6 @@
 
 \begin{table}[ht]
-\caption{Resultados en términos de la métrica F1, la variable n indica la magnitud del aumento en el conjunto original.} \label{table:resultados}
+\caption{Resultados en términos de la métrica F1, la variable $n$ indica la magnitud del aumento en el conjunto original.} \label{table:resultados}
 
 \begin{center}
 
