--- a/docs/latex/05-Experimentos.tex
+++ b/docs/latex/05-Experimentos.tex
@@ -1,7 +1,5 @@
 \chapter{Configuración experimental y resultados}
-En este capítulo se presenta la configuración experimental y el detalle de los conjuntos de datos empleados, además de los parámetros elegidos para la construcción de los diferentes clasificadores para la evaluación del método propuesto, al final se presenta un análisis de los resultados y se comparan las diferentes estrategias de aumento de datos. Adicionalmente, para poder reproducir los resultados, este proyecto esta públicamente disponible en github\footnote{github.com/v1ktop/data\_augmentation\_for\_author\_profiling}.
-
-
+En este capítulo se presenta la configuración experimental y el detalle de los conjuntos de datos empleados, además de los parámetros elegidos para la construcción de los diferentes clasificadores para la evaluación del método propuesto, al final se presenta un análisis de los resultados y se comparan las diferentes estrategias de aumento de datos. Adicionalmente, para poder reproducir los resultados, este proyecto está públicamente disponible en github\footnote{github.com/v1ktop/data\_augmentation\_for\_author\_profiling}.
 
 
 \input{sections/05-experimentos/00-configuracion_exp}
