--- a/docs/latex/sections/tables/depresion_users_no_filter.tex
+++ b/docs/latex/sections/tables/depresion_users_no_filter.tex
@@ -1,5 +1,5 @@
 \begin{table}[!hbt]
-\caption{Número de usuarios en los conjuntos de datos y número de secuencias con 64 palabras después del pre-procesamiento, sin aplicar el filtro. Los números resaltados en negritas representan el número de historiales comparado con el número de secuencias.} \label{table:original_users}
+\caption{Número de usuarios en los conjuntos de datos y número de secuencias con 64 palabras. Los números resaltados en negritas representan el número de historiales.} \label{table:original_users}
 
 \begin{center}
 
